--- a/views/base_template.twig
+++ b/views/base_template.twig
@@ -2,13 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Search Frontend</title>
+    <title>{% block title %} Search Frontend {% endblock %}</title>
     <link rel="stylesheet" href="styles.css">
     <script src="frontend.js"></script>
 </head>
 <body>
     <div class="block">
         {% block content %}
+        {% endblock %}
+    </div>
+    <div>
+        {% block allTitles %}
         {% endblock %}
     </div>
     <footer>
