--- a/views/test.twig
+++ b/views/test.twig
@@ -1,8 +1,13 @@
 {% extends 'base_template.twig' %}
 
+{% block title %}
+{{ title }}
+{% endblock %}
+
 {% block content %}
 Hello {{ name }}!!
 {% endblock %}
 
 {% block footer %}
+Goodbye
 {% endblock %}
